# Logger

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
src/: LogCapture.cpp  LogCapture.hpp  LogColor.hpp  LogLevel.hpp  LogMessage.hpp  OwnLogger.cpp  OwnLogger.hpp
src/Logger/: LogLevel.hpp  Logger.hpp
